feat(post): call to action

--- a/src/content/projects/advanced-blog-system-in-gatsby.mdx
+++ b/src/content/projects/advanced-blog-system-in-gatsby.mdx
@@ -676,13 +676,10 @@ But remember that it is not a tool like Wordpress. It doesn’t have an infinity
 
 The solution I’ve just shown in this article, requires the person who will manage the content to have a minimal knowledge about `markdown` and version control (git). However, if it’s a required feature maybe [Prismic](https://prismic.io/) or [Netlify C](https://www.netlifycms.org/)MS could solve this problem, but I haven’t yet tried these tools within this workflow. If you already have, let me know your experience and your thoughts.
 
-<aside>
-  <h4>Check out the result of this article:</h4>
+---
 
-  <a href="https://gatsby-advanced-blog-system.danilowoz.now.sh/blog" target="_blank" rel="noreferrer">
-    Live preview
-  </a>
-  <a href="https://github.com/danilowoz/gatsby-advanced-blog-system" target="_blank" rel="noreferrer">
-    Codebase on Github
-  </a>
-</aside>
+Check out the result of this article in the [Github](ttps://github.com/danilowoz/gatsby-advanced-blog-system) or see the [preview](https://gatsby-advanced-blog-system.danilowoz.now.sh/blog).
+
+So, what was it like building your own blog using Gatsby? **Tweet me [@danilowoz](https://twitter.com/danilowoz) and share your new amazing blog.**
+
+---
