--- a/src/content/projects/atomic-design-with-react.mdx
+++ b/src/content/projects/atomic-design-with-react.mdx
@@ -155,6 +155,14 @@ At the end of project, we reached the initial goals and we believe we left a goo
 
 However we could see that this architecture probably doesn’t work for every project because it depends on several factors. The main one is that the design needs to be thought in the same way as the development: **in an atomic way**. But the integration between design and development is a point that every project wants to reach, so it becomes a very positive point for **Atomic Design.**
 
+---
+
+Check out the result and the [codebase of this article in the Github.](https://github.com/danilowoz/react-atomic-design)
+
+I'm a big enthusiast of componentization and style guides, so if you have more experience with atomic design or even another approach feel free to reach me out. **Tweet me [@danilowoz](https://twitter.com/danilowoz) and let's chat.**
+
+---
+
 ### References
 
 [**Boilerplate on GitHub**](https://github.com/danilowoz/react-atomic-design)
@@ -168,11 +176,3 @@ However we could see that this architecture probably doesn’t work for every pr
 [Using React within a design system](https://medium.com/buildit/using-react-within-a-design-system-73d4bb0cc822)
 
 [Atomic components managing dynamic react components using atomic design](https://medium.com/@yejodido/atomic-components-managing-dynamic-react-components-using-atomic-design-part-1-5f07451f261f)
-
-<aside>
-  <h4>Check out the result of this article:</h4>
-
-  <a href="https://github.com/danilowoz/react-atomic-design" target="_blank" rel="noreferrer">
-    Codebase on Github
-  </a>
-</aside>
