--- a/src/content/projects/generating-typescript-types-and-react-hooks-based-on-graphql-endpoint.mdx
+++ b/src/content/projects/generating-typescript-types-and-react-hooks-based-on-graphql-endpoint.mdx
@@ -1,8 +1,7 @@
 export const metadata = {
   priority: 2,
   type: 'article',
-  title:
-    'How to use React Hooks on Code Generator GraphQL',
+  title: 'How to use React Hooks on Code Generator GraphQL',
   tagline:
     'Autogenerate Typescript types and custom React hooks in React applications with GraphQL Code Generator.',
   date: '2020-21-07T19:28:06.529Z',
@@ -115,4 +114,10 @@ And as it turns out in the editor code:
 
 This is only one of the possible ways to use it, as it has many plugins, presets, integrations, and configurations, for different purposes such as to generate React higher-order component, Gatsby integration, prettier and lint the files, among other cool things. Feel free to check out the documentation [here](https://graphql-code-generator.com/).
 
-I've made a repository available with the code above, and you can [check it out here](https://github.com/danilowoz/ts-gql-jsx).
+---
+
+I've made a repository available with the code above, and you can [check it out here in Github](https://github.com/danilowoz/ts-gql-jsx).
+
+Also, have you made any further improvements on your own in this flow or is there still any doubt? **Tweet me [@danilowoz](https://twitter.com/danilowoz) and share your story.**
+
+---
