feat(blog): publish more two posts

--- a/src/content/projects/wipe.mdx
+++ b/src/content/projects/wipe.mdx
@@ -1,5 +1,4 @@
 export const metadata = {
-  priority: 10,
   type: 'github',
   link: 'https://github.com/danilowoz/wipe.css',
   title: 'Wipe.css',
@@ -7,5 +6,5 @@ export const metadata = {
   tagline:
     "It's a library to reset default styles with some opinionated and great changes.",
   categories: ['Project', 'reset-css', 'css  ', 'reset'],
-  cover: './images/advanced-blog-system-in-gatsby/asset-1.png',
+  cover: '/images/advanced-blog-system-in-gatsby/asset-1.png',
 }
