--- a/src/content/projects/my-own-styled-components.mdx
+++ b/src/content/projects/my-own-styled-components.mdx
@@ -1,5 +1,4 @@
 export const metadata = {
-  priority: 10,
   type: 'github',
   link: 'https://github.com/danilowoz/my-styled-component',
   title: 'My very own Styled-component',
@@ -7,5 +6,5 @@ export const metadata = {
   tagline:
     'My own implementation of styled-components within 100 lines of code.',
   categories: ['Project'],
-  cover: './images/advanced-blog-system-in-gatsby/asset-1.png',
+  cover: '/mages/advanced-blog-system-in-gatsby/asset-1.png',
 }
