--- a/src/content/projects/four-lessons-i-learned-from-maintaining-a-10k-stars-project-on-github.mdx
+++ b/src/content/projects/four-lessons-i-learned-from-maintaining-a-10k-stars-project-on-github.mdx
@@ -12,7 +12,7 @@ export const metadata = {
   timeToRead: '4 min read',
 }
 
-In 2017 I started a new project with a single goal: learn unit testing. Since then a lot of things happened with react-content-loader (a React skeleton package) and it reached a status that I could have never imagined. It had countless contributions, suggestions and discussions, and most of all I had the opportunity to interact with many awesome developers around the world.
+In 2017 I started a new project with a single goal: learn unit testing. Since then a lot of things happened with [react-content-loader](https://github.com/danilowoz/react-content-loader) (a React skeleton package) and it reached a status that I could have never imagined. It had countless contributions, suggestions and discussions, and most of all I had the opportunity to interact with many awesome developers around the world.
 
 Along that, the open-source community - especially the React one - taught me a couple of lessons that I'd like to share for present or future project maintainers.
 
@@ -20,7 +20,7 @@ Along that, the open-source community - especially the React one - taught me a c
 
 As the source code is available to any person in the world to check it out, different perspectives and opinions are brought up, and that's amazing. I have no idea how many times the codebase itself and the build script were rewritten from scratch, in order to improve legibility, performance and/or compatibility. Also, contributions are not only about coding, but issues with documentation, bug reporting, doubts, and examples are also very important to produce a successful project.
 
-In one of these issues, I realized that sometimes a product needs support to make it more usable. So, I figured out a way to create another new tool which would help the main project; as a result, create-content-loader was born to introduce presets, adding examples from the community, including documentation and third-party tutorials. From that moment on, the main project increased its audience significantly. Consequently, more developers can use and also contribute to the project, creating a sub-community around the project.
+In one of these issues, I realized that sometimes a product needs support to make it more usable. So, I figured out a way to create another new tool which would help the main project; as a result, [create-content-loader](https://skeletonreact.com) was born to introduce presets, adding examples from the community, including documentation and third-party tutorials. From that moment on, the main project increased its audience significantly. Consequently, more developers can use and also contribute to the project, creating a sub-community around the project.
 
 ### Focus on one problem and solve it
 
