feat(blockchain post): refer link

--- a/src/content/projects/bringing-your-blockchain-business-to-react-native.mdx
+++ b/src/content/projects/bringing-your-blockchain-business-to-react-native.mdx
@@ -95,7 +95,7 @@ However, there are some points we've learned with this experience which we can r
 
 Bottom line, we faced a bunch of problems while developing a Cryptocurrency App in the Blockchain using React Native. It had its ups and downs, but in the end, it was extremely rewarding. We've learned a lot with our own mistakes, we spent hours figuring out one single deployment, but in the end, the whole thing got sorted. We hope we're paving the way for those who follow.
 
-In case you have any questions or facing any issues, feel free to get in touch with me.
+By and large, a [React Native developer will need some hard and soft technical skills](https://www.g2i.co/blog/hiring-a-react-native-developer), in order to solve these kinds of problems. However, as mentioned before, certainly the React and crypto community will provide a way to solve these and futures situations.
 
 ---
 
