feat(project): create new section

--- a/src/content/projects/coverify.mdx
+++ b/src/content/projects/coverify.mdx
@@ -1,8 +1,7 @@
 export const metadata = {
-  priority: 4,
   type: 'web',
   link: 'https://coverify.now.sh/',
-  title: 'Coverify: Design fresh album cover for your Spotify playlists ',
+  title: 'GetCoverify.com',
   tagline:
     'Coverify is a web tool to create yourself artwork, where you can apply different fonts, colors and a ton of images from Unsplash; and upload it directly on Spotify.',
   date: '2020-04-01T15:06:01.607Z',
