--- a/src/content/projects/react-native-styl.mdx
+++ b/src/content/projects/react-native-styl.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   type: 'github',
   link: 'https://github.com/danilowoz/react-native-styl',
-  title: 'React Native: React Native Styl',
+  title: 'React Native Styl',
   date: '2020-05-01T15:06:01.607Z',
   tagline: 'The easiest way to write stylesheets and free of dependencies.',
   categories: ['TypeScript', 'React Native', 'StyleSheet'],
