--- a/src/content/projects/react-content-loader.mdx
+++ b/src/content/projects/react-content-loader.mdx
@@ -1,10 +1,8 @@
 export const metadata = {
-  priority: 5,
   type: 'github',
   link: 'https://github.com/danilowoz/react-content-loader',
-  title: 'React content loader: SVG-Powered skeleton loadings.',
-  tagline:
-    'UI pattern loading to show as soon as possible a mirror of the layout you expect to have once data arrives.',
+  title: 'React content loader',
+  tagline: 'SVG-Powered component to easily create skeleton loadings.',
   date: '2020-01-01T15:06:01.607Z',
   categories: ['Design tool', 'Skeleton', 'React', 'React Native'],
   cover: '/images/react-content-loader/cover.png',
