--- a/src/content/projects/create-content-loader.mdx
+++ b/src/content/projects/create-content-loader.mdx
@@ -2,7 +2,7 @@ export const metadata = {
   type: 'web',
   link: 'https://skeletonreact.com',
   date: '2020-01-01T15:06:01.607Z',
-  title: 'Design tool: Create content loader',
+  title: 'create react-content-loader',
   tagline:
     'Create fully customizable skeleton animations for your website with React Content Loader.',
   categories: ['Design tool', 'Skeleton', 'React', 'React Native'],
