--- a/src/content/projects/wipe.mdx
+++ b/src/content/projects/wipe.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   type: 'github',
   link: 'https://github.com/danilowoz/wipe.css',
-  title: 'Wipe.css',
+  title: 'wipe.css',
   date: '2019-01-01T15:06:01.607Z',
   tagline:
     "It's a library to reset default styles with some opinionated and great changes.",
