--- a/src/content/projects/my-own-styled-components.mdx
+++ b/src/content/projects/my-own-styled-components.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   type: 'github',
   link: 'https://github.com/danilowoz/my-styled-component',
-  title: 'My very own Styled-component',
+  title: 'styled-components from scratch',
   date: '2019-01-01T15:06:01.607Z',
   tagline:
     'My own implementation of styled-components within 100 lines of code.',
