--- a/src/content/projects/react-content-loader.mdx
+++ b/src/content/projects/react-content-loader.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   type: 'github',
   link: 'https://github.com/danilowoz/react-content-loader',
-  title: 'React content loader',
+  title: 'react-content-loader',
   tagline: 'SVG-Powered component to easily create skeleton loadings.',
   date: '2020-01-01T15:06:01.607Z',
   categories: ['Design tool', 'Skeleton', 'React', 'React Native'],
