fix(code editor): copy

--- a/src/content/projects/react-code-editor.mdx
+++ b/src/content/projects/react-code-editor.mdx
@@ -31,7 +31,7 @@ Roughly speaking:
 
 So basically, we can predict what actions the user might perform and teach and introduce the best practices to them. So, it evolved to a new concept which are menus with context-sensitive intentions linked to whose areas.
 
-<video autoPlay muted>
+<video autoPlay muted playsInline>
   <source src="/images/code-editor/ide-concept.mp4" type="video/mp4" />
 </video>
 
@@ -40,10 +40,6 @@ The whole point of this concept is that we can understand the code to provide a 
 ## Some extra thoughts
 
 Definitely, this experiment worthed! After posting on Twitter, I got a lot of exciting suggestion and thoughts that I want to share here:
-
-### Original tweet
-
-<Tweet tweetId="1393212141122031621" />
 
 ### Suggestions
 
