fix(ui): update

--- a/src/content/projects/react-code-editor.mdx
+++ b/src/content/projects/react-code-editor.mdx
@@ -4,23 +4,24 @@ export const metadata = {
   type: 'article',
   title: 'A React code editor',
   tagline:
-    'How a code editor for beginners developers focused on ReactJS might look.',
+    'How a code editor for beginner developers focused on ReactJS might look.',
   date: '2021-04-16T15:06:01.607Z',
   categories: ['Design tool', 'React'],
   cover: '/images/code-editor/cover.jpg',
+  timeToRead: '2 min read',
 }
 
-Have we already exhausted the possibilities of how we interact with our favorite code editor? Have we got so used to how we code to achieve certain points we can no longer see any way to involve it?
+Have we already exhausted the possibilities of how we interact with our favorite code editor? Have we got so used to how we code to achieve a certain goal we can no longer see any way to involve it?
 
-Since I started to work at the CodeSandbox, I saw myself facing those issues more often. Besides that, I began to picture how beginners are struggling to rule the code editor and learn their favorite framework simultaneously.
+Since I started to work at [CodeSandbox](https://codesandbox.io/?from-app=1), I've seen myself facing those issues more often. Besides that, I began to wonder how beginners are struggling to rule the code editor and learn their favorite framework simultaneously.
 
-So I challenge myself to concept a code editor/IDE for beginners developers focused on ReactJS and how it might look like.
+Therefore, I challenged myself to come up with a code editor/IDE for beginner developers focused on ReactJS and what this concept might look like.
 
-## The Anatomy of a Component
+## The anatomy of a component
 
-The first concept came to me some time ago, when I was teaching a friend of mine more about React and how a component works. And then, I remember to say the component itself has a proper "anatomy". Later, I realized it makes a lot of sense because we know where the things are supposed to be in a component.
+The first concept came to me some time ago, when I was teaching a friend of mine more about React and how a component works. I remember I said the component itself has a proper "anatomy". Later, I realized it makes a lot of sense because **we know where things are supposed to be in a component.**
 
-Roughly speaking:
+In other words:
 
 <img
   src="/images/code-editor/anatomy.jpg"
@@ -29,19 +30,17 @@ Roughly speaking:
   height="385"
 />
 
-So basically, we can predict what actions the user might perform and teach and introduce the best practices to them. So, it evolved to a new concept which are menus with context-sensitive intentions linked to whose areas.
+So basically, we can predict what actions the user might take and teach them the best practices. So, this idea evolved to a new concept which are menus with context-sensitive intentions linked to those sectors.
 
 <video autoPlay muted playsInline>
   <source src="/images/code-editor/ide-concept.mp4" type="video/mp4" />
 </video>
 
-The whole point of this concept is that we can understand the code to provide a way to do this with whatever framework or even language we want. I just used React to illustrate the idea.
+The whole point of this concept is that we can understand the code to provide a way to make a new code editor with whatever framework or even language we want. I just used React to illustrate the idea.
 
 ## Some extra thoughts
 
-Definitely, this experiment worthed! After posting on Twitter, I got a lot of exciting suggestion and thoughts that I want to share here:
-
-### Suggestions
+This experiment was definitely worth it! After posting on Twitter, I got a lot of exciting suggestion and thoughts that I want to share here:
 
 <Tweet tweetId="1393468932569411586" />
 <Tweet tweetId="1393536281704083458" />
