--- a/src/content/header.mdx
+++ b/src/content/header.mdx
@@ -1,3 +1,3 @@
-# Design-driven developer focused on crafting products in ReactJS. I write about new technologies, how I've solved some problems, and bring out my side-projects.
+# Design-driven developer focused on crafting products in ReactJS. I write about new technologies, my side-projects, and how I've solved some  problems
 
 #### I'm **Danilo Woznica**
