--- a/src/content/projects/naming-my-function.mdx
+++ b/src/content/projects/naming-my-function.mdx
@@ -3,7 +3,7 @@ export const metadata = {
   link: 'http://namingmyfunction.vercel.app/',
   title: "I don't know how to name my function",
   tagline:
-    "Development can be more challenging than you thought. It's not about algorithms, data structures, or whatever, but about naming functions and variables! (fearful face) Here's a tool to help you in this intense journey: naming a function.",
+    "Development can be more challenging than you thought. It's not about algorithms, data structures, or whatever, but about naming functions and variables!",
   date: '2020-11-19T15:06:01.607Z',
   categories: ['Design tool', 'JavaScript'],
   cover: '/images/naming-my-func.jpg',
