feat(blog): tweaks

--- a/src/content/projects/advanced-blog-system-in-gatsby.mdx
+++ b/src/content/projects/advanced-blog-system-in-gatsby.mdx
@@ -677,7 +677,7 @@ The solution I’ve just shown in this article, requires the person who will man
 
 ---
 
-Check out the result of this article in the [Github](ttps://github.com/danilowoz/gatsby-advanced-blog-system) or see the [preview](https://gatsby-advanced-blog-system.danilowoz.now.sh/blog).
+Check out the result of this article in the [Github](https://github.com/danilowoz/gatsby-advanced-blog-system) or see the [preview](https://gatsby-advanced-blog-system.danilowoz.now.sh/blog).
 
 So, what was it like building your own blog using Gatsby? **Tweet me [@danilowoz](https://twitter.com/danilowoz) and share your new amazing blog.**
 
