--- a/src/content/projects/spatial-keyboard-navigation.mdx
+++ b/src/content/projects/spatial-keyboard-navigation.mdx
@@ -2,9 +2,9 @@ export const metadata = {
   type: 'article',
   title: 'Spatial keyboard navigation',
   tagline:
-    'A visual hierarchy approach to navigate throughs selectable elements on a page.',
+    'A visual hierarchy approach to navigate through selectable elements on a page.',
   date: '2021-10-10T15:06:01.607Z',
-  categories: ['UX', 'Experiement'],
+  categories: ['UX', 'Experiment'],
   cover: '/images/spatial/cover.jpg',
   timeToRead: '2 min read',
 }
@@ -28,6 +28,8 @@ That said, putting all selectable elements in a visual hierarchy structure and u
 <video autoPlay muted playsInline>
   <source src="/images/spatial/spatial-navigation.mp4" type="video/mp4" />
 </video>
+
+[Example: Use the arrow keys to navigate](https://spatial-keyboard-navigation.vercel.app/)
 
 This approach makes it easier and faster to navigate through the selectable elements, plus it doesn't introduce any new aspects and it doesn't require any new learnings from the users.
 
@@ -84,3 +86,9 @@ const Sidebar = () => {
 [Zeh Fernandes](https://twitter.com/zehf)
 
 [https://en.wikipedia.org/wiki/Method_of_loci](https://en.wikipedia.org/wiki/Method_of_loci)
+
+---
+
+Check out the result of this article in the [Github](https://github.com/danilowoz/spatial-keyboard-navigation) or see the [preview](https://spatial-keyboard-navigation.vercel.app/).
+
+---
