feat(blog): table responsive

--- a/src/content/projects/spatial-keyboard-navigation.mdx
+++ b/src/content/projects/spatial-keyboard-navigation.mdx
@@ -56,10 +56,16 @@ import { Provider } from 'spatial-keyboard-navigation'
 const App = ({ children }) => <Provider>{children}</Provider>
 ```
 
+<div className="table-wrap">
+
+
 | Prop name       | Description                                                    | Type      | Default value   |
 | --------------- | -------------------------------------------------------------- | --------- | --------------- |
 | `areaClassName` | ClassName when the area is selected                            | `string`  | `area-selected` |
 | `strictArea`    | It doesn't allow the user navigate beyond the area boundaries. | `boolean` | `false`         |
+
+</div>
+
 
 ### Components
 
